<resources>
    <string name="app_name">DataCollector</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_remote_switch">Enable remote Control</string>
    <string name="pref_description_remote_switch">
        If enabled the App is controlled via a remote control
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header">General</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="accel">Acceleration</string>
    <string name="accelUnC">Acceleration Uncalibrated</string>
    <string name="accelLin">Linear Acceleration</string>
    <string name="gyr">Gyroscope</string>
    <string name="gyrUnC">Gyroscope Uncalibrated</string>
    <string name="mag">Magnetometer</string>
    <string name="magUn">Magnetometer Uncalibrated</string>
    <string name="grav">Gravity</string>
    <string name="lux">Luminosity</string>
    <string name="bar">Barometer</string>
    <string name="pref_description_remote_switch_wifi">Enables or disables WIFI recording</string>
    <string name="pref_description_remote_switch_audio">Enables or disables Audio recording</string>
    <string name="pref_description_remote_switch_ble">Enables or disables Bluetooth recording</string>
    <string name="pref_title_remote_switch_wifi">Enable WIFI</string>
    <string name="pref_title_remote_switch_audio">Enable Audio</string>
    <string name="pref_title_remote_switch_ble">Enable Bluetooth</string>

</resources>
